<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:layout_marginTop="16dp"
    android:padding="8dp"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".DetailCharacter">

        <LinearLayout
            android:id="@+id/linear_card"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="1dp"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/img_chara"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="center"
                tools:src="@drawable/albedo" />
            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TableRow
                    android:background="#6600f5"
                    android:padding="4dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_weight="1"
                        android:textColor="#fff"
                        android:text="@string/rarity"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_weight="1"
                        android:textColor="#fff"
                        android:text="@string/vision"/>
                </TableRow>
                <TableRow android:background="#fff">
                    <ImageView
                        android:id="@+id/rarity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        tools:src="@drawable/five_stars"/>
                    <ImageView
                        android:id="@+id/vision"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_weight="1"
                        tools:src="@drawable/element_hydro"/>
                </TableRow>
            </TableLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/linear_bio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TableRow>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_horizontal"
                        android:textSize="30sp"
                        android:layout_weight="1"
                        android:text="@string/bio"/>
                </TableRow>
                <TableRow android:padding="1dp">
                    <TextView
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:text="@string/name"/>
                    <TextView
                        android:id="@+id/name"
                        android:layout_width="220sp"
                        android:layout_height="wrap_content"
                        tools:text="@string/test_about"/>
                </TableRow>
                <TableRow android:padding="1dp">
                    <TextView
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:text="@string/region"/>
                    <TextView
                        android:id="@+id/region"
                        android:layout_width="220sp"
                        android:layout_height="wrap_content"
                        tools:text="@string/name"/>
                </TableRow>
                <TableRow android:padding="1dp">
                    <TextView
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:text="@string/constellation"/>
                    <TextView
                        android:id="@+id/constellation"
                        android:layout_width="220sp"
                        android:layout_height="wrap_content"
                        tools:text="@string/name"/>
                </TableRow>
                <TableRow android:padding="1dp">
                    <TextView
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:text="@string/birthday"/>
                    <TextView
                        android:id="@+id/birthday"
                        android:layout_width="220sp"
                        android:layout_height="wrap_content"
                        tools:text="@string/name"/>
                </TableRow>
                <TableRow android:padding="1dp">
                    <TextView
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:text="@string/title"/>
                    <TextView
                        android:id="@+id/title"
                        android:layout_width="220sp"
                        android:layout_height="wrap_content"
                        tools:text="@string/name"/>
                </TableRow>
            </TableLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp">
            <TableRow>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textSize="30sp"
                    android:layout_weight="1"
                    android:text="@string/about"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="4dp"
                    android:layout_gravity="start"
                    android:layout_weight="1"
                    tools:text="@string/test_about"/>
            </TableRow>
        </TableLayout>
    </LinearLayout>
</ScrollView>
